syntax = "proto3";

package pb;

option go_package = "github.com/jpmoraess/appointment-api/pb";

message CreateUserRequest {
    string name = 1;
    string password = 2;
}

message CreateUserResponse {
    int64 userId = 1;
    int64 tenantId = 2;
}

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
}